crates/core/tests/ui/derive/fail/missing_attr.rs
#[derive(babar::Codec)]
struct Broken {
    #[pg(codec = "int4")]
    id: i32,
    name: String,
}

fn main() {}
